# mbot

./: README.md  README.md~
arm_arduino/: arm_arduino.ino
base_arduino/: receive.ino
base_arduino/base_arduino/: base_arduino.ino
base_arduino/base_test/: base_test.ino
base_arduino/receive/: receive.ino
m_bot/: CMakeLists.txt  CMakeLists.txt~  package.xml~
m_bot/scripts/: arm.py  info.py  teach_mode_client.py  teach_mode_server.py
mbot_config/: CMakeLists.txt  apc.json  apc_ORI.json  package.xml  teach_mode.json  teach_mode.json~  teach_mode_2p.json  teach_mode_2p.json~  teach_mode_p2_glue.json  teach_mode_pick1p.json~
mbot_config/old/: teach_mode1205.json  teach_mode_0107.json  teach_mode_dei.json  teach_mode_lefttop.json  teach_mode_p1.json
mbot_config/teach/: teach_mode.json  teach_mode_all.json  teach_mode_o1_OK.json  teach_mode_o1_move_OK.json  teach_mode_pick1p.json
mbot_control/: CMakeLists.txt  CMakeLists.txt~  base_function_pointer.7z  package.xml  package.xml~  teach_mode.json
mbot_control/action/: TeachCommandList.action  UIFO.action  UIFO.action~  UI_Info.action
mbot_control/base/: CMakeLists.txt  CMakeLists.txt~  MotorControl.h  MotorControl.h~  README.md  README.md~  base.cpp  base.cpp~  motion.cpp~
mbot_control/base/cssl/: cssl.c
mbot_control/msg/: TeachCommand.msg  WebChat.msg
mbot_control/scripts/: .project  apc_echo.json  arm.py  control.py  fake_json_publisher.py  info not finish  info.py  info.py~  joy_control.py  joy_control.py~  moveit_info.py  strategy.py  teach_mode_client.py  teach_mode_client.py~  teach_mode_server.py  teach_mode_server.py~  test_compute_fk.py  test_file.py  test_strategy.py  ur5_control.py  ur5_control.py~  ur5_demo.py~
mbot_control/srv/: UI_Server.srv~
mbot_launch/: CMakeLists.txt  package.xml
mbot_launch/launch/: cyber.launch  cyber.launch~  physical.launch  physical.launch~  teach.launch  teach.launch~
mbot_strategy/: CMakeLists.txt  package.xml
teach_web/: MM_Web.7z  index.html  index151023.html  testdrag.html
vision/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
web/: Chat.html  Chat.html~  Teach_Mode.html  Untitled Document  apc_test.json  apc_test.json~  fibonacci.html  index.html  index.html~  index0.html  index151027.html  json_decoder.html  json_decoder.html~  remote_control.html  remote_control.html~  teach.html~  teach_mode.html  teach_mode.html~  write.asp~
web01/: apc.json~  dejson.json~  index.html  index.html~  json.html~  json_decoder.html~  json_web.html~
(+82 files in other folders)
